# skillfactory_rds4_recommendation_challenge

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  README.md  baseline-logreg.ipynb  collaboraion.md  deploy.sh  docker-compose.yml  docker-image.sh  go-to-production.md  jupyter-in-docker.md  known-issues.md  lightfm-lightgbm.ipynb  main.ipynb  nn-collab-filter.ipynb  production-architechture.md  production-site-map.md  production-stack.md  yurybikuzin.ipynb
books/: u6-p4-books.ipynb
books/data/: .gitattributes
data/: .gitattributes  README.md  itemid_asin.csv  itemid_asin_train.csv  main.py
data/templates/: main_cat.html
dev/: ver.yml
dev/flask/: Dockerfile
dev/proj/: Dockerfile  README.md  build.sh
dev/prov/: .gitignore  Dockerfile
dev/prov/sh/: docker-entrypoint.sh
docker/jupyter/: .dockerignore  Dockerfile  build.sh
prod/: ver.yml
prod/flask/: Dockerfile  requirements.txt  uwsgi.ini
src/: Cargo.toml
src/arrange_millis/src/: lib.rs
src/flask/: alter_db.py  main.py
src/flask/data/: .gitattributes  flask.db  item_embeddings.pickle  nms.idx
src/flask/static/: filter.css  filter.js  gallery.css  gallery.js  header.css  item.css  review.css  style.css
src/flask/templates/: cat.html  filter-main.html  filter.html  filter_prev.html  head.html  header.html  image.html  image_style.html  index.html  index_prev.html  item.html  main_cat.html  review.html  script.js  stars.html  title.html
src/provide/: Cargo.toml
src/provide/src/: main.rs
src/rust/: Cargo.toml  README.md  data-for-production.md  db.bash  json-to-csv.md  py.py  rust.md
src/rust/arrange_millis/: Cargo.toml
src/rust/db/: .env  Cargo.toml  README.md
src/rust/db/migrations/2020-08-22-085448_create_train/: down.sql  up.sql
src/rust/db/src/: main.rs
src/rust/db/src/db/: mod.rs  models.rs  schema.rs
src/rust/json/: Cargo.toml
src/rust/json/src/: lib.rs
src/rust/json/test_data/: sample.json
src/rust/parse/: Cargo.toml
src/rust/parse/src/: main.rs
src/rust/provide/src/: main.rs
src/rust/test_helper/: Cargo.toml
src/rust/test_helper/src/: lib.rs
