[package]
name = "arrange_millis"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
