[package]
name = "json"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# thiserror = "1.0"
# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
log = "0.4"
# chrono = "0.4.11"
# ids = { path = "../ids" }
# pretty_assertions = "0.6.1"
tokio = { version = "0.2", features = ["fs"] }
paste = "0.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
test_helper = { path = "../test_helper" }
pretty_assertions = "0.6.1"
lazy_static = "1.4.0"
regex = "1.3.9"


