[package]
name = "provide"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"
structopt = "0.3"
config = "0.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["rt-threaded", "macros", "fs"] }
indicatif = "0.15"
zip = "0.5"
arrange_millis = { path = "../arrange_millis" }
csv = "1.1"
rusqlite = "0.23"
